tests/integration/seed/predictions/invalid/classification1.jsonlines
{"annotations": { "Sentiment": {"labels": [{"value": "pos"}]}, "FOO": "1831440"}}
